# simple-icloud

./: LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: publish.yml  release.yml
